# darkman-time

./: .build.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENCE  Makefile  README.md  README.rst  boottimer.go  configuration.go  configuration_test.go  darkman.1.scd  darkman.desktop  darkman.py  darkman.service  dbus-api.xml  dbus.go  geoclient.go  go.mod  go.sum  location.go  main.go  man-style.css  man.md  portal.go  pyproject.toml  scheduler.go  scripts.go  service.go  setup.cfg  setup.py  transition.go  transition_handler.go
boottimer/: boottimer.go
cmd/: main.go
cmd/darkman/: main.go
contrib/: darkmanctl
contrib/dbus/: nl.whynothugo.darkman.service  org.freedesktop.impl.portal.desktop.darkman.service
contrib/portal/: darkman.portal
ctl/: main.go
darkman/: __init__.py  __main__.py  cli.py  controller.py  geoclient.py
examples/dark-mode.d/: kde-global-theme.sh  kde-konsole-theme.sh  kde-yakuake-theme.sh
examples/light-mode.d/: kde-global-theme.sh  kde-konsole-theme.sh  kde-yakuake-theme.sh
geoclue/: client.go
libdarkman/: lib.go
